<resources>
    <string name="app_name">Showseverywhere</string>
    <string name="txv_titulo">Shows Everywhere - Login</string>
    <string name="txv_usuario">Usuario o e-mail</string>
    <string name="txv_contrasena">Contraseña</string>
    <string name="chbx_recordar_usuario">Recordar usuario</string>
    <string name="txv_registrar"><u>Registrame</u></string>
    <string name="txv_olvido_contrasena"><u>He olvidado mi contraseña</u></string>
    <string name="btn_acceder">Acceder</string>
    <string name="btn_google">Google</string>
    <string name="btn_facebook">Entrar con facebook</string>
    <string name="btn_asistir">Asistiré</string>
    <string name="btn_no_asistir">No asistiré</string>
    <string name="btn_detalles">Detalles</string>
    <string name="txv_fecha">Fecha</string>
    <string name="txv_artista_grupo">Artista/grupo</string>
    <string name="txv_local">Local</string>
    <string name="txv_descripcion">Descripcion</string>
    <string name="txv_hora_comienzo">Hora comienzo</string>
    <string name="txv_hora_fin">Hora fin</string>
    <string name="favoritos">Favoritos</string>
    <string name="actuaciones_proximas">Actuaciones próximas</string>
    <string name="toolbar_amigos_title">Amigos</string>
    <string name="toolbar_favoritos_title">Favoritos</string>
    <string name="menu_item_sobre_mi">Sobre mi</string>
    <string name="txv_nombre_amigo">Nick de tu amigo:</string>
    <string name="txv_recuperacion">Introduce tu email y te enviaremos un correo de recuperacion</string>
    <string name="enviar">Enviar</string>
    <string name="txv_soy_tipo_usuario">Soy:</string>
    <string name="rbtn_usuario_estandar">Usuario estándar</string>
    <string name="rbtn_artista">Artista</string>
    <string name="rbtn_propietario">Propietario</string>
    <string name="txv_usuario_registro">Usuario*</string>
    <string name="txv_contrasena_registro">Contraseña*</string>
    <string name="txv_email">Email*</string>
    <string name="txv_provincia">Provincia*</string>
    <string name="txv_aviso_1">* Campos obligatorios</string>
    <string name="btn_registrarme">Registrarme</string>
    <string name="txv_usuario_artista">Nombre*</string>
    <string name="txv_apellido_artista">Apellido*</string>
    <string name="txv_nombre_artistico_artista">Nombre artistico</string>
    <string name="txv_contrasena_artista">Contraseña*</string>
    <string name="txv_email_artista">Email*</string>
    <string name="txv_telefono_artista">Telefono*</string>
    <string name="txv_provincia_artista">Provincia*</string>
    <string name="txv_tipo_artista">Tipo artista*</string>
    <string name="txv_organizacion_artista">Organización</string>
    <string name="txv_habilidades_artista">Cuentanos tus habilidades*</string>
    <string name="txv_descripcion_artista">Descripcion sobre ti</string>
    <string name="txv_aviso1_artista">* Campos obligatorios</string>
    <string name="txv_aviso2_artista">Tu telefono solo será visible para propietarios que quieran ponerse en contacto contigo</string>
    <string name="btn_registrarme_artista">Registrarme</string>
    <string name="txv_nombre_propietario">Nombre*</string>
    <string name="txv_apellido_propietario">Apellido*</string>
    <string name="txv_contrasena_propietario">Contraseña*</string>
    <string name="txv_email_propietario">Email*</string>
    <string name="txv_telefono_propietario">Telefono*</string>
    <string name="txv_provincia_propietario">Provincia*</string>
    <string name="txv_descripcion_propietario">Descripcion sobre ti</string>
    <string name="txv_aviso1_propietario">* Campos obligatorios</string>
    <string name="txv_aviso2_propietario">Tu telefono solo será visible para artistas que quieran ponerse en contacto contigo</string>
    <string name="btn_registrarme_propietario">Registrarme</string>
    <string name="action_mode_amigos_borrar">Borrar</string>

    <!--Errores login y registro-->
    <string name="error_usuario_vacio">Debe introducir un usuario</string>
    <string name="error_contrasena_vacia">Debe introducir una contraseña</string>
    <string name="error_credenciales_incorrectos">Nombre de usuario o contraseña no coinciden con ningún usuario registrado</string>
    <string name="error_campo_obligatorio_vacio">Debe rellenar todos los campos obligatorios (*)</string>
    <string name="error_email_mal_formado">El email no es correcto</string>
    <string name="error_contrasena_mal_formada">La contraseña debe tener al menos: un número, una mayúscula y una minúscula. Debe
    estar entre los 6 y los 50 carácteres.</string>

    <!--Registro-->

    <string name="exito_registro">Se ha registrado con éxito</string>

    <!--Arrays-->
    <string-array name="amigos_tabs">
        <item>Amigos</item>
        <item>Asistencias</item>
    </string-array>
</resources>
